Release Notes

* 10/8/2015
  * ignoring TEST when converting token to RSE

* 10/7/2015
  * added a margin to the multiplier of disk count estimation for pmerge
  * fixed CF for nEventsPerRange

* 10/6/2015
  * changed JG to release the lock as soon as tasks are taken when nQueued<nQueueLimit
  * fixed lackOfJobs

* 10/2/2015
  * fixed JG to reset destinationDBlock when the site doesn't have endpoint for ddd:	
  * more fixed CF for seq_num+skipFilesUsedBy

* 10/1/2015
  * fixed CF for seq_num+skipFilesUsedBy
  * changed JG to lock just before final task update

* 9/30/2015
  * added ddd:
  * changed AtlasPJB to work with cpuTime=0

* 9/29/2015
  * fixed setScoutJobDataToTasks_JEDI to take young tasks into account
  * suppressed files in JediDataset.str 

* 9/28/2015
  * added retrial module

* 9/27/2015
  * fixed AtlasProdWatchDog for reassigning

* 9/25/2015
  * added protection to TC for empty commentStr

* 9/24/2015
  * changed APJB to take priority-based shares into account 

* 9/22/2015
  * removed amiFlag

* 9/21/2015
  * fixed failWhenGoalUnreached for goal=100.0
  * fixed rescuePicked to lock tasks

* 9/11/2015
  * added setScoutJobDataToTasks

* 9/9/2015
  * added WORLD

* 9/1/2015
  * added skipFilesUsedBy

* 8/27/2015
  * changed AtlasPJB to skip share check for test/validation

* 8/25/2015
  * setting activity for registerDatasetLocation
  * changed task.outDiskCount to include size of intermediate files
  * changed task.outDiskCount to scale with events when outDiskUnit has PerEvent
  * changed AtlasPJB so that merge jobs avoid SHORT

* 8/24/2015
  * modified retryChildTask not to reactivate children if they were aborted/broken

* 8/21/2015
  * changed prepareTasksToBeFinished so that scouting can be kicked
  * increasing taskprio by 1 for ready/scout so that scouts don't wait behind the bulk

* 8/20/2015
  * fixed getTasksToBeProcessed to respect priorities of prod tasks
  * changed the limit to avoid inactive sites to prio=800

* 8/18/2015