@@ -1,5 +1,8 @@
 Release Notes
 
+* 10/12/2015
+  * added dynamic nQueueLimit
+
 * 10/8/2015
   * ignoring TEST when converting token to RSE
 
